# Agent-Foundry-Converter

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT.md  README.md  history.md  index.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-15-agent-foundry-pull-design.md
progress/: contract-map.yaml  contract-map.yaml.sig  integration-ledger.md
tests/: conftest.py  test_cli.py  test_comparator.py  test_compat_matrix.py  test_converter_copilot.py  test_converter_copilot_cli.py  test_converter_gemini.py  test_converter_windsurf.py  test_converters_base.py  test_crypto.py  test_env.py  test_exporter.py  test_foundry_loader.py  test_importer.py  test_integration.py  test_interactive.py  test_models.py  test_path_rewriter.py  test_platform_utils.py  test_prereqs.py  test_pull.py  test_scanner.py  test_sync.py  test_url_sanitizer.py  test_xref_resolver.py
tests/fixtures/agent_foundry/agents/: alpha_agent.md  beta_agent.md
tests/fixtures/agent_foundry/docs/dependencies/: README.md
tests/fixtures/agent_foundry/skills/_meta/: gates.py  hard-rules-checklist.md
tests/fixtures/agent_foundry/skills/alpha/: SKILL.md
tests/fixtures/agent_foundry/skills/beta/: SKILL.md
tests/fixtures/agent_foundry/skills/delta/: SKILL.md
tests/fixtures/agent_foundry/skills/gamma/: SKILL.md
tests/fixtures/claude_home/: settings.json  settings.local.json
tests/fixtures/claude_home/plans/: test-plan.md
tests/fixtures/claude_home/plugins/: installed_plugins.json
tests/fixtures/claude_home/projects/-test-project/: CLAUDE.md
tests/fixtures/claude_home/projects/-test-project/memory/: MEMORY.md  project_notes.md
tests/fixtures/claude_home/skills/test-skill/: test-skill.md
tests/fixtures/claude_home/teams/test-team/: config.json
transfer_kit/: __init__.py  __main__.py  cli.py  env.py  interactive.py  models.py  platform_utils.py  prereqs.py
transfer_kit/converters/: base.py  copilot.py  copilot_cli.py  gemini.py  windsurf.py
transfer_kit/core/: comparator.py  compat.py  crypto.py  exporter.py  foundry_loader.py  importer.py  path_rewriter.py  pull.py  scanner.py  sync.py  url_sanitizer.py  xref_resolver.py
transfer_kit/data/: compat_matrix.yaml  gates_g2_shim.py
transfer_kit/templates/host_agents/: copilot.md  copilot_cli.md  gemini.md
